--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,9 +31,11 @@ base64 = "0.21"
 # Solana
 solana-sdk = "1.18"
 solana-client = "1.18"
+solana-transaction-status = "1.18"
 anchor-client = { version = "0.30", optional = true }
 spl-associated-token-account = "2"
 spl-token = "4"
+tower-governor = { version = "0.4", default-features = false, features = ["axum"] }
 
 [features]
 anchor = ["anchor-client"]
