--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,8 @@ tower = "0.5"
 tower-http = { version = "0.5", features = ["trace", "cors"] }
 uuid = { version = "1", features = ["v4", "serde"] }
 time = "0.3"
+reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
+bincode = "1"
 
 # Database
 sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "uuid", "time", "macros"] }
