--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,10 @@ jsonwebtoken = "9"
 ed25519-dalek = { version = "2", default-features = true }
 futures = "0.3"
 bs58 = "0.5"
+sha2 = "0.10"
 base64 = "0.21"
+totp-rs = { version = "5", default-features = false, features = ["otpauth", "gen_secret", "serde_support"] }
+data-encoding = "2"
 
 # Solana
 solana-sdk = "1.18.26"
