--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,11 +21,11 @@ reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
 bincode = "1"
 
 # Database
-sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "uuid", "time", "macros"] }
+sqlx = { version = "0.7.4", default-features = false, features = ["runtime-tokio", "postgres", "uuid", "time"] }
 
 # Auth / crypto
 jsonwebtoken = "9"
-ed25519-dalek = { version = "2", default-features = true }
+ed25519-dalek = { version = "1", default-features = false, features = ["std"] }
 futures = "0.3"
 bs58 = "0.5"
 sha2 = "0.10"
@@ -33,7 +33,6 @@ base64 = "0.21"
 totp-rs = { version = "5", default-features = false, features = ["otpauth", "gen_secret", "serde_support"] }
 data-encoding = "2"
 borsh = "1"
-solana-program = "1.18.26"
 
 # Solana
 solana-sdk = "1.18.26"
@@ -48,7 +47,8 @@ tower_governor = { version = "0.4", default-features = false, features = ["axum"
 anchor = ["anchor-client"]
 
 [dev-dependencies]
-rand = "0.8"
+rand = "0.7"
 
 [patch.crates-io]
-spl-token = "=4.0.0"
+sqlx-mysql = { path = "patches/sqlx-mysql" }
+base64ct = { path = "patches/RustCrypto-formats/base64ct" }
