--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0"
 axum = { version = "0.7", features = ["macros", "json", "ws"] }
+axum-extra = { version = "0.9", features = ["typed-header"] }
 dotenvy = "0.15"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0"
@@ -16,12 +17,12 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 tower = "0.5"
 tower-http = { version = "0.5", features = ["trace", "cors"] }
 uuid = { version = "1", features = ["v4", "serde"] }
-time = "0.3"
+time = { version = "0.3", features = ["serde"] }
 reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
 bincode = "1"
 
 # Database
-sqlx = { version = "0.7.4", default-features = false, features = ["runtime-tokio", "postgres", "uuid", "time"] }
+sqlx = { version = "0.7.4", default-features = false, features = ["runtime-tokio", "postgres", "uuid", "time", "macros"] }
 
 # Auth / crypto
 jsonwebtoken = "9"
